fix alignment issues

--- a/src/views/home.css
+++ b/src/views/home.css
@@ -4278,12 +4278,12 @@ dialog p a:visited {
 
   .home-plan1 {
     width: auto;
-    width: auto;
+    height: auto;
   }
 
   .home-plan2 {
     width: auto;
-    width: auto;
+    height: auto;
   }
 
   .home-text076 {
